Fix placement of recently implemented DIE

It's the DIE added for enumeration types with reverse scalar storage order.

gcc/
	PR debug/113519
	PR debug/113777
	* dwarf2out.cc (gen_enumeration_type_die): In the reverse case,
	generate the DIE with the same parent as in the regular case.

gcc/testsuite/
	* gcc.dg/sso-20.c: New test.
	* gcc.dg/sso-21.c: Likewise.